test/sema/typeck/struct/type-params-trait-bound-err.dora
trait MyTrait {}
struct Foo[T: MyTrait](Int32)
fn f(x: Foo[Int32]) {}
